--- a/_posts/2015-03-25-vuforia.md
+++ b/_posts/2015-03-25-vuforia.md
@@ -210,4 +210,6 @@ Now, to use this key in your code, get the contents of the script element and pa
   })
 {% endhighlight %}
 
-Once Vuforia is initialized, it will 
+Once Vuforia is initialized using your encrypted license file, you can use any Vuforia dataset that is loaded from a URL matching one of the patterns in the JSON file.  
+
+Note: if a relative URL is passed to *api.loadDataSetFromURL*, we construct the full address from the base URL of the URL the user used to load your web application.  This may be problematic if the user (or your web server) does URL redirection -- this is a known problem that we are working on fixing.
