Argon 3 tutorials update

--- a/_posts/2016-03-01-Tutorial4.md
+++ b/_posts/2016-03-01-Tutorial4.md
@@ -7,7 +7,8 @@ permalink: /tutorials/tutorial4
 Make sure you have completed [tutorial 1](/tutorials/tutorial1)
 
 ### What you should see
-Download [Argon3](https://itunes.apple.com/us/app/argon3/id944297993?ls=1&mt=8) and [Try Now](/code/tutorial4)
+**Quick Demo:**
+Download [Argon3](https://itunes.apple.com/us/app/argon3/id944297993?ls=1&mt=8) and [Try Now](argon3://tutorials.argonjs.io/code/tutorials/tutorial4-Panorama)
 
 As you move your camera around, you should see a panoramic, 360-degree view of Atlanta’s midtown.
 {% include tutorial4Video.html %}
