--- a/_posts/2016-03-01-Tutorial6.md
+++ b/_posts/2016-03-01-Tutorial6.md
@@ -5,10 +5,12 @@ permalink: /tutorials/tutorial6
 ---
 ### Before you start
 Make sure you have completed [tutorial 1](/tutorials/tutorial1)
+
 Follow:[this](https://developer.vuforia.com/sites/default/files/sample-apps/targets/imagetargets_targets.pdf) link to view the image targets used in this tutorial
 
 ### What you should see
-Download [Argon3](https://itunes.apple.com/us/app/argon3/id944297993?ls=1&mt=8) and [Try Now](/code/tutorial6)
+**Quick Demo:**
+Download [Argon3](https://itunes.apple.com/us/app/argon3/id944297993?ls=1&mt=8) and [Try Now](argon3://tutorials.argonjs.io/code/tutorials/tutorial6-Vuforia)
 
 1. When your camera captures the stones image, you should see a colorful, 3d box floating and spinning above the image.
 {% include tutorial6Video1.html %}
