--- a/_posts/2016-03-01-Tutorial1.md
+++ b/_posts/2016-03-01-Tutorial1.md
@@ -6,7 +6,7 @@ permalink: /tutorials/tutorial1
 
 ### Welcome
 **Quick Demo:**
-Download [Argon3](https://itunes.apple.com/us/app/argon3/id944297993?ls=1&mt=8) and [Try Now](/code/tutorial1)
+Download [Argon3](https://itunes.apple.com/us/app/argon3/id944297993?ls=1&mt=8) and [Try Now](argon3://tutorials.argonjs.io/code/tutorials/tutorial1)
 
 ### Setting up
 
@@ -18,7 +18,7 @@ Step 3: Unzip these files and move them onto a personal server.
 
 Step 4: Install [Argon3](https://itunes.apple.com/us/app/argon3/id944297993?ls=1&mt=8)  from the App Store onto an iOS device.
 
-Step 5: Access your server from the Argon3 mobile browser and open the folder containing your newly unzipped files. The path is: *argon.js/dist/examples/tutotial1*. or <a href="{{ site.baseurl }}/argon-tutorials.zip">Download</a> tutorials source files from this site.
+Step 5: Access your server from the Argon3 mobile browser and open the folder containing your newly unzipped files. The path is: *argon.js/dist/examples/tutotial1*. or <a href="{{ site.baseurl }}/code.zip">Download</a> tutorials source files from this site.
 
 Step 6: You should see an icon on the corner of your screen. This means you have completed the tutorial!
 
@@ -66,7 +66,7 @@ In these examples, we follow a coding style that does not include any inline Jav
 
 In addition to offering AR features (such as geolocation, video of the surrounding word, 3D graphics and image tracking), the Argon3 browser is a standard web browser (e.g., on iOS, it uses Apple's web renderer) and can therefore render any web content available on the platform. You can take advantage of these capabilities in three ways.
 
-* First, argon uses (or creates) a special div with the id argon-immersive-context. Anything you put in this div (or in divs nested inside this one) will be rendered on the screen in 2D, in front of the 3D AR context (argon-three.js creates a CSS 3D perspective div and/or WebGL canvas behind any other content in this div, into which the 3D AR content is rendered). You can use this feature to create interface elements such as display boxes or button to provide information and interactivity for your application. You can see examples of this special argon div in [tutorials 5 (Geolocation)](/2016/03/01/Tutorial5) and [3 (Periodic)](/2016/03/01/Tutorial3).
+* First, argon uses (or creates) a special div with the id argon-immersive-context. Anything you put in this div (or in divs nested inside this one) will be rendered on the screen in 2D, in front of the 3D AR context (argon-three.js creates a CSS 3D perspective div and/or WebGL canvas behind any other content in this div, into which the 3D AR content is rendered). You can use this feature to create interface elements such as display boxes or button to provide information and interactivity for your application. You can see examples of this special argon div in [tutorials 5 (Geolocation)]({{ site.baseurl }}tutorials/tutorial5) and [3 (Periodic Table)]({{ site.baseurl }}tutorials/tutorial3).
 
 * Second, you can put any additional divs into the body that you wish. These will be visible when the user puts the Argon3 browser into "Page Mode" by touching the toggle button in the upper right hand corner of the interface. Argon3 will enable the "Page Mode" button when it sees non-AR content in the <body></body> of the document. Initially, this non-AR content is hidden. When the user activates Page Mode, the 3D content in that channel disappears (i.e., the content argon-three.js inserted into the argon-immersive-context), and the user sees the other HTML of the page (which is normally hidden). You can use this feature to add instructions, text, images, or any other multimedia content to your argon.js experience. For example, in tutorials 2-6, we add text that explains the purpose of the example.
 
@@ -89,4 +89,4 @@ var three = THREE.Bootstrap( options )
 
 * Line 3 uses threestrap to create a three.js scene graph along with the chosen renderer and store it as the variable three.
 
-Together these three lines initialize the argon.js framework to use the device’s camera to display the world as an immersive background and create a scene graph to which the channel can attach 3D content.  You then add the javascript code that creates and manipulates that content. For a first example of how this works, continue to [Tutorials 5 (Geolocation)](/tutorials/tutorial5)
+Together these three lines initialize the argon.js framework to use the device’s camera to display the world as an immersive background and create a scene graph to which the channel can attach 3D content.  You then add the javascript code that creates and manipulates that content. For a first example of how this works, continue to [Tutorials 5 (Geolocation)]({{ site.baseurl }}tutorials/tutorial5)
