--- a/_posts/2016-03-01-Tutorial2.md
+++ b/_posts/2016-03-01-Tutorial2.md
@@ -7,7 +7,8 @@ permalink: /tutorials/tutorial2
 Make sure you have completed [tutorial 1](/tutorials/tutorial1)
 
 ### What you should see
-Download [Argon3](https://itunes.apple.com/us/app/argon3/id944297993?ls=1&mt=8) and [Try Now](/code/tutorial2)
+**Quick Demo:**
+Download [Argon3](https://itunes.apple.com/us/app/argon3/id944297993?ls=1&mt=8) and [Try Now](argon3://tutorials.argonjs.io/code/tutorials/tutorial2-Compass)
 
 As you move your camera around, you should see direction markers (north, east, south, west, up and down) positioned in space.
 {% include tutorial2Video.html %}
